--- a/phpdoc/Patterns/Abstracts/AbstractSingleton.html
+++ b/phpdoc/Patterns/Abstracts/AbstractSingleton.html
@@ -166,7 +166,7 @@ or <code>init</code> method.</p>
                     <table>
                     <tr>
                 <td><a href="http://php.net/Exception"><abbr title="Exception">Exception</abbr></a></td>
-                <td>Trying to clone a Singleton object will throw an Excpetion</td>
+                <td>Trying to clone a Singleton object will throw an Exception</td>
             </tr>
             </table>
 
