--- a/phpdoc/Patterns/Interfaces/TranslatableInterface.html
+++ b/phpdoc/Patterns/Interfaces/TranslatableInterface.html
@@ -27,9 +27,8 @@
     <strong>TranslatableInterface</strong></p>
 
             <div class="description">
+            <p>This work is BETA (not fully tested)</p>
             <p>A simple interface for translation objects</p>
-            <p>
-</p>
         </div>
     
     
@@ -87,7 +86,7 @@
         <h2>Details</h2>
 
                         <h3 id="method_setLanguage">
-        <div class="location">at line 19</div>
+        <div class="location">at line 21</div>
         <code>            public            
     <strong>setLanguage</strong>($lang, $throw_errors = true, $force_rebuild = false)</code>
     </h3>
@@ -127,7 +126,7 @@
     </div>
 
                 <h3 id="method_getLanguage">
-        <div class="location">at line 20</div>
+        <div class="location">at line 22</div>
         <code>            public            
     <strong>getLanguage</strong>()</code>
     </h3>
@@ -144,7 +143,7 @@
     </div>
 
                 <h3 id="method_translate">
-        <div class="location">at line 21</div>
+        <div class="location">at line 23</div>
         <code>        static    public            
     <strong>translate</strong>($index, array $args = array(), $lang = null)</code>
     </h3>
@@ -184,7 +183,7 @@
     </div>
 
                 <h3 id="method_pluralize">
-        <div class="location">at line 22</div>
+        <div class="location">at line 24</div>
         <code>        static    public            
     <strong>pluralize</strong>(array $indexes = array(), $number, array $args = array(), $lang = null)</code>
     </h3>
