--- a/phpdoc/classes.html
+++ b/phpdoc/classes.html
@@ -207,7 +207,7 @@
                     <em>                    <a href="Patterns/Interfaces/TranslatableInterface.html" target="main"><abbr title="Patterns\Interfaces\TranslatableInterface">Patterns\Interfaces\TranslatableInterface</abbr></a>
                     </em>                </td>
                 <td>
-                    A simple interface for translation objects
+                    This work is BETA (not fully tested)
                 </td>
             </tr>
                     <tr>
@@ -215,7 +215,7 @@
                     <em>                    <a href="Patterns/Interfaces/UserInterface.html" target="main"><abbr title="Patterns\Interfaces\UserInterface">Patterns\Interfaces\UserInterface</abbr></a>
                     </em>                </td>
                 <td>
-                    A simple user interface
+                    This work is BETA (not fully tested)
                 </td>
             </tr>
                     <tr>
@@ -223,8 +223,7 @@
                     <em>                    <a href="Patterns/Interfaces/ViewInterface.html" target="main"><abbr title="Patterns\Interfaces\ViewInterface">Patterns\Interfaces\ViewInterface</abbr></a>
                     </em>                </td>
                 <td>
-                    
-
+                    This work is BETA (not fully tested)
                 </td>
             </tr>
                     <tr>
@@ -232,8 +231,7 @@
                     <em>                    <a href="Patterns/Interfaces/WebPageInterface.html" target="main"><abbr title="Patterns\Interfaces\WebPageInterface">Patterns\Interfaces\WebPageInterface</abbr></a>
                     </em>                </td>
                 <td>
-                    
-
+                    This work is BETA (not fully tested)
                 </td>
             </tr>
             </table>
