--- a/phpdoc/interfaces.html
+++ b/phpdoc/interfaces.html
@@ -106,27 +106,25 @@
                     <tr>
                 <td><a href="Patterns/Interfaces/TranslatableInterface.html" target="main"><abbr title="Patterns\Interfaces\TranslatableInterface">Patterns\Interfaces\TranslatableInterface</abbr></a></td>
                 <td class="last">
-                    A simple interface for translation objects
+                    This work is BETA (not fully tested)
                 </td>
             </tr>
                     <tr>
                 <td><a href="Patterns/Interfaces/UserInterface.html" target="main"><abbr title="Patterns\Interfaces\UserInterface">Patterns\Interfaces\UserInterface</abbr></a></td>
                 <td class="last">
-                    A simple user interface
+                    This work is BETA (not fully tested)
                 </td>
             </tr>
                     <tr>
                 <td><a href="Patterns/Interfaces/ViewInterface.html" target="main"><abbr title="Patterns\Interfaces\ViewInterface">Patterns\Interfaces\ViewInterface</abbr></a></td>
                 <td class="last">
-                    
-
+                    This work is BETA (not fully tested)
                 </td>
             </tr>
                     <tr>
                 <td><a href="Patterns/Interfaces/WebPageInterface.html" target="main"><abbr title="Patterns\Interfaces\WebPageInterface">Patterns\Interfaces\WebPageInterface</abbr></a></td>
                 <td class="last">
-                    
-
+                    This work is BETA (not fully tested)
                 </td>
             </tr>
             </table>
