--- a/phpdoc/Patterns/Commons/Registry.html
+++ b/phpdoc/Patterns/Commons/Registry.html
@@ -52,14 +52,14 @@ a stack of registries and can be loaded as the current one (replacing it).</p>
                     void
                 </td>
                 <td class="last">
-                    <a href="#method___set">__set</a>(string $var = null, <abbr title="Patterns\Commons\misc">misc</abbr> $val = null)
-                    <p>Set an entry in the instance registry (magic setter)  This method is "magic" and will be called by PHP when an object's property is defined like <code>$obj-&gt;prop = value</code> ; concerned property will be automatically added to the registry.</p>
+                    <a href="#method___set">__set</a>(string $var = null, mixed $val = null)
+                    <p>Set an entry in the instance registry (magic setter)</p>
                 </td>
                 <td></td>
             </tr>
                     <tr>
                 <td class="type">
-                    <abbr title="Patterns\Commons\misc">misc</abbr>
+                    mixed
                 </td>
                 <td class="last">
                     <a href="#method___get">__get</a>(string $var = null)
@@ -72,7 +72,7 @@ a stack of registries and can be loaded as the current one (replacing it).</p>
                     <a href="../../Patterns/Commons/Registry.html"><abbr title="Patterns\Commons\Registry">Registry</abbr></a>
                 </td>
                 <td class="last">
-                    <a href="#method_setEntry">setEntry</a>(string $var = null, <abbr title="Patterns\Commons\misc">misc</abbr> $val = null, string $section = false)
+                    <a href="#method_setEntry">setEntry</a>(null|string $var = null, null|mixed $val = null, <abbr title="Patterns\Commons\false">false</abbr>|string $section = false)
                     <p>Set an entry in the instance registry</p>
                 </td>
                 <td></td>
@@ -82,17 +82,17 @@ a stack of registries and can be loaded as the current one (replacing it).</p>
                     <a href="../../Patterns/Commons/Registry.html"><abbr title="Patterns\Commons\Registry">Registry</abbr></a>
                 </td>
                 <td class="last">
-                    <a href="#method_addEntry">addEntry</a>(<abbr title="Patterns\Commons\misc">misc</abbr> $val = null, string $section = false)
+                    <a href="#method_addEntry">addEntry</a>(mixed $val = null, string $section = false)
                     <p>Add an entry in a section of the instance registry</p>
                 </td>
                 <td></td>
             </tr>
                     <tr>
                 <td class="type">
-                    <abbr title="Patterns\Commons\misc">misc</abbr>
+                    mixed
                 </td>
                 <td class="last">
-                    <a href="#method_getEntry">getEntry</a>(string $var = null, string $section = false, <abbr title="Patterns\Commons\misc">misc</abbr> $default = null)
+                    <a href="#method_getEntry">getEntry</a>(string $var = null, string $section = false, mixed $default = null)
                     <p>Get an entry from the instance registry</p>
                 </td>
                 <td></td>
@@ -112,17 +112,17 @@ a stack of registries and can be loaded as the current one (replacing it).</p>
                     string|null
                 </td>
                 <td class="last">
-                    <a href="#method_getKey">getKey</a>(<abbr title="Patterns\Commons\misc">misc</abbr> $val = null, string $var = null, string $section = false)
+                    <a href="#method_getKey">getKey</a>(mixed $val = null, string $var = null, string $section = false)
                     <p>Search a key in registry</p>
                 </td>
                 <td></td>
             </tr>
                     <tr>
                 <td class="type">
-                    <abbr title="Patterns\Commons\misc">misc</abbr>
+                    mixed
                 </td>
                 <td class="last">
-                    <a href="#method_dumpStack">dumpStack</a>(string $index = null, <abbr title="Patterns\Commons\misc">misc</abbr> $default = null)
+                    <a href="#method_dumpStack">dumpStack</a>(string $index = null, mixed $default = null)
                     <p>Get a full stack from registry stacks</p>
                 </td>
                 <td></td>
@@ -159,20 +159,20 @@ a stack of registries and can be loaded as the current one (replacing it).</p>
             </tr>
                     <tr>
                 <td class="type">
-                    <abbr title="Patterns\Commons\misc">misc</abbr>
+                    mixed
                 </td>
                 <td class="last">
-                    <a href="#method_getStackEntry">getStackEntry</a>(string $var = null, string $section = false, string $stack = null, <abbr title="Patterns\Commons\misc">misc</abbr> $default = null)
+                    <a href="#method_getStackEntry">getStackEntry</a>(string $var = null, string $section = false, string $stack = null, mixed $default = null)
                     <p>Get a stack entry of the registry stacks</p>
                 </td>
                 <td></td>
             </tr>
                     <tr>
                 <td class="type">
-                    <abbr title="Patterns\Commons\misc">misc</abbr>
+                    mixed
                 </td>
                 <td class="last">
-                    <a href="#method_getStackKey">getStackKey</a>(string $val = null, string $section = false, string $stack = null, <abbr title="Patterns\Commons\misc">misc</abbr> $default = null)
+                    <a href="#method_getStackKey">getStackKey</a>(string $val = null, string $section = false, string $stack = null, mixed $default = null)
                     <p>Get the key of a stack entry of the registry stacks</p>
                 </td>
                 <td></td>
@@ -211,12 +211,13 @@ a stack of registries and can be loaded as the current one (replacing it).</p>
                 <h3 id="method___set">
         <div class="location">at line 60</div>
         <code>            public            void
-    <strong>__set</strong>(string $var = null, <abbr title="Patterns\Commons\misc">misc</abbr> $val = null)</code>
+    <strong>__set</strong>(string $var = null, mixed $val = null)</code>
     </h3>
     <div class="details">
-        <p>Set an entry in the instance registry (magic setter)  This method is "magic" and will be called by PHP when an object's property is defined like <code>$obj-&gt;prop = value</code> ; concerned property will be automatically added to the registry.</p>
-        <p>
-</p>
+        <p>Set an entry in the instance registry (magic setter)</p>
+        <p>This method is "magic" and will be called by PHP when an object's property
+is defined like <code>$obj-&gt;prop = value</code> ; concerned property will be automatically
+added to the registry.</p>
         <div class="tags">
                             <h4>Parameters</h4>
 
@@ -227,7 +228,7 @@ a stack of registries and can be loaded as the current one (replacing it).</p>
                 <td>The variable name to set</td>
             </tr>
                     <tr>
-                <td><abbr title="Patterns\Commons\misc">misc</abbr></td>
+                <td>mixed</td>
                 <td>$val</td>
                 <td>The variable value to set</td>
             </tr>
@@ -260,7 +261,7 @@ a stack of registries and can be loaded as the current one (replacing it).</p>
 
                 <h3 id="method___get">
         <div class="location">at line 76</div>
-        <code>            public            <abbr title="Patterns\Commons\misc">misc</abbr>
+        <code>            public            mixed
     <strong>__get</strong>(string $var = null)</code>
     </h3>
     <div class="details">
@@ -284,7 +285,7 @@ exists in the registry.</p>
 
                     <table>
         <tr>
-            <td><abbr title="Patterns\Commons\misc">misc</abbr></td>
+            <td>mixed</td>
             <td>
 </td>
         </tr>
@@ -307,7 +308,7 @@ exists in the registry.</p>
                 <h3 id="method_setEntry">
         <div class="location">at line 89</div>
         <code>            public            <a href="../../Patterns/Commons/Registry.html"><abbr title="Patterns\Commons\Registry">Registry</abbr></a>
-    <strong>setEntry</strong>(string $var = null, <abbr title="Patterns\Commons\misc">misc</abbr> $val = null, string $section = false)</code>
+    <strong>setEntry</strong>(null|string $var = null, null|mixed $val = null, <abbr title="Patterns\Commons\false">false</abbr>|string $section = false)</code>
     </h3>
     <div class="details">
         <p>Set an entry in the instance registry</p>
@@ -318,17 +319,17 @@ exists in the registry.</p>
 
                     <table>
                     <tr>
-                <td>string</td>
+                <td>null|string</td>
                 <td>$var</td>
                 <td>The variable name to set</td>
             </tr>
                     <tr>
-                <td><abbr title="Patterns\Commons\misc">misc</abbr></td>
+                <td>null|mixed</td>
                 <td>$val</td>
                 <td>The variable value to set</td>
             </tr>
                     <tr>
-                <td>string</td>
+                <td><abbr title="Patterns\Commons\false">false</abbr>|string</td>
                 <td>$section</td>
                 <td>A section name in the registry (default is FALSE)</td>
             </tr>
@@ -340,7 +341,8 @@ exists in the registry.</p>
                     <table>
         <tr>
             <td><a href="../../Patterns/Commons/Registry.html"><abbr title="Patterns\Commons\Registry">Registry</abbr></a></td>
-            <td>Returns <code>$this</code> for method chaining</td>
+            <td>
+</td>
         </tr>
     </table>
 
@@ -350,9 +352,9 @@ exists in the registry.</p>
     </div>
 
                 <h3 id="method_addEntry">
-        <div class="location">at line 110</div>
+        <div class="location">at line 111</div>
         <code>            public            <a href="../../Patterns/Commons/Registry.html"><abbr title="Patterns\Commons\Registry">Registry</abbr></a>
-    <strong>addEntry</strong>(<abbr title="Patterns\Commons\misc">misc</abbr> $val = null, string $section = false)</code>
+    <strong>addEntry</strong>(mixed $val = null, string $section = false)</code>
     </h3>
     <div class="details">
         <p>Add an entry in a section of the instance registry</p>
@@ -363,7 +365,7 @@ exists in the registry.</p>
 
                     <table>
                     <tr>
-                <td><abbr title="Patterns\Commons\misc">misc</abbr></td>
+                <td>mixed</td>
                 <td>$val</td>
                 <td>The variable value to set</td>
             </tr>
@@ -380,7 +382,8 @@ exists in the registry.</p>
                     <table>
         <tr>
             <td><a href="../../Patterns/Commons/Registry.html"><abbr title="Patterns\Commons\Registry">Registry</abbr></a></td>
-            <td>Returns <code>$this</code> for method chaining</td>
+            <td>
+</td>
         </tr>
     </table>
 
@@ -390,9 +393,9 @@ exists in the registry.</p>
     </div>
 
                 <h3 id="method_getEntry">
-        <div class="location">at line 128</div>
-        <code>            public            <abbr title="Patterns\Commons\misc">misc</abbr>
-    <strong>getEntry</strong>(string $var = null, string $section = false, <abbr title="Patterns\Commons\misc">misc</abbr> $default = null)</code>
+        <div class="location">at line 130</div>
+        <code>            public            mixed
+    <strong>getEntry</strong>(string $var = null, string $section = false, mixed $default = null)</code>
     </h3>
     <div class="details">
         <p>Get an entry from the instance registry</p>
@@ -413,7 +416,7 @@ exists in the registry.</p>
                 <td>A section name in the registry (default is FALSE)</td>
             </tr>
                     <tr>
-                <td><abbr title="Patterns\Commons\misc">misc</abbr></td>
+                <td>mixed</td>
                 <td>$default</td>
                 <td>The default value to return if it is not in registry (default is NULL)</td>
             </tr>
@@ -424,7 +427,7 @@ exists in the registry.</p>
 
                     <table>
         <tr>
-            <td><abbr title="Patterns\Commons\misc">misc</abbr></td>
+            <td>mixed</td>
             <td>The value found or $default</td>
         </tr>
     </table>
@@ -435,7 +438,7 @@ exists in the registry.</p>
     </div>
 
                 <h3 id="method_isEntry">
-        <div class="location">at line 146</div>
+        <div class="location">at line 149</div>
         <code>            public            bool
     <strong>isEntry</strong>(string $var = null, string $section = false)</code>
     </h3>
@@ -476,9 +479,9 @@ exists in the registry.</p>
     </div>
 
                 <h3 id="method_getKey">
-        <div class="location">at line 163</div>
+        <div class="location">at line 167</div>
         <code>            public            string|null
-    <strong>getKey</strong>(<abbr title="Patterns\Commons\misc">misc</abbr> $val = null, string $var = null, string $section = false)</code>
+    <strong>getKey</strong>(mixed $val = null, string $var = null, string $section = false)</code>
     </h3>
     <div class="details">
         <p>Search a key in registry</p>
@@ -489,7 +492,7 @@ exists in the registry.</p>
 
                     <table>
                     <tr>
-                <td><abbr title="Patterns\Commons\misc">misc</abbr></td>
+                <td>mixed</td>
                 <td>$val</td>
                 <td>The variable value to find</td>
             </tr>
@@ -521,9 +524,9 @@ exists in the registry.</p>
     </div>
 
                 <h3 id="method_dumpStack">
-        <div class="location">at line 189</div>
-        <code>            public            <abbr title="Patterns\Commons\misc">misc</abbr>
-    <strong>dumpStack</strong>(string $index = null, <abbr title="Patterns\Commons\misc">misc</abbr> $default = null)</code>
+        <div class="location">at line 194</div>
+        <code>            public            mixed
+    <strong>dumpStack</strong>(string $index = null, mixed $default = null)</code>
     </h3>
     <div class="details">
         <p>Get a full stack from registry stacks</p>
@@ -539,7 +542,7 @@ exists in the registry.</p>
                 <td>The stack index</td>
             </tr>
                     <tr>
-                <td><abbr title="Patterns\Commons\misc">misc</abbr></td>
+                <td>mixed</td>
                 <td>$default</td>
                 <td>The default value to return if it is not in registry (default is NULL)</td>
             </tr>
@@ -550,7 +553,7 @@ exists in the registry.</p>
 
                     <table>
         <tr>
-            <td><abbr title="Patterns\Commons\misc">misc</abbr></td>
+            <td>mixed</td>
             <td>The requested stack entry if so</td>
         </tr>
     </table>
@@ -561,7 +564,7 @@ exists in the registry.</p>
     </div>
 
                 <h3 id="method_saveStack">
-        <div class="location">at line 204</div>
+        <div class="location">at line 209</div>
         <code>            public            <a href="../../Patterns/Commons/Registry.html"><abbr title="Patterns\Commons\Registry">Registry</abbr></a>
     <strong>saveStack</strong>(string $index = null, bool $and_clean = false)</code>
     </h3>
@@ -591,7 +594,8 @@ exists in the registry.</p>
                     <table>
         <tr>
             <td><a href="../../Patterns/Commons/Registry.html"><abbr title="Patterns\Commons\Registry">Registry</abbr></a></td>
-            <td>Returns <code>$this</code> for method chaining</td>
+            <td>
+</td>
         </tr>
     </table>
 
@@ -601,7 +605,7 @@ exists in the registry.</p>
     </div>
 
                 <h3 id="method_isStack">
-        <div class="location">at line 217</div>
+        <div class="location">at line 222</div>
         <code>            public            bool
     <strong>isStack</strong>(string $index = null)</code>
     </h3>
@@ -637,7 +641,7 @@ exists in the registry.</p>
     </div>
 
                 <h3 id="method_loadStack">
-        <div class="location">at line 228</div>
+        <div class="location">at line 233</div>
         <code>            public            <a href="../../Patterns/Commons/Registry.html"><abbr title="Patterns\Commons\Registry">Registry</abbr></a>
     <strong>loadStack</strong>(string $index = null)</code>
     </h3>
@@ -662,7 +666,8 @@ exists in the registry.</p>
                     <table>
         <tr>
             <td><a href="../../Patterns/Commons/Registry.html"><abbr title="Patterns\Commons\Registry">Registry</abbr></a></td>
-            <td>Returns <code>$this</code> for method chaining</td>
+            <td>
+</td>
         </tr>
     </table>
 
@@ -672,9 +677,9 @@ exists in the registry.</p>
     </div>
 
                 <h3 id="method_getStackEntry">
-        <div class="location">at line 243</div>
-        <code>            public            <abbr title="Patterns\Commons\misc">misc</abbr>
-    <strong>getStackEntry</strong>(string $var = null, string $section = false, string $stack = null, <abbr title="Patterns\Commons\misc">misc</abbr> $default = null)</code>
+        <div class="location">at line 248</div>
+        <code>            public            mixed
+    <strong>getStackEntry</strong>(string $var = null, string $section = false, string $stack = null, mixed $default = null)</code>
     </h3>
     <div class="details">
         <p>Get a stack entry of the registry stacks</p>
@@ -700,7 +705,7 @@ exists in the registry.</p>
                 <td>The stack name to search in</td>
             </tr>
                     <tr>
-                <td><abbr title="Patterns\Commons\misc">misc</abbr></td>
+                <td>mixed</td>
                 <td>$default</td>
                 <td>The default value to return if it is not in registry (default is NULL)</td>
             </tr>
@@ -711,7 +716,7 @@ exists in the registry.</p>
 
                     <table>
         <tr>
-            <td><abbr title="Patterns\Commons\misc">misc</abbr></td>
+            <td>mixed</td>
             <td>The value found or $default</td>
         </tr>
     </table>
@@ -722,9 +727,9 @@ exists in the registry.</p>
     </div>
 
                 <h3 id="method_getStackKey">
-        <div class="location">at line 265</div>
-        <code>            public            <abbr title="Patterns\Commons\misc">misc</abbr>
-    <strong>getStackKey</strong>(string $val = null, string $section = false, string $stack = null, <abbr title="Patterns\Commons\misc">misc</abbr> $default = null)</code>
+        <div class="location">at line 271</div>
+        <code>            public            mixed
+    <strong>getStackKey</strong>(string $val = null, string $section = false, string $stack = null, mixed $default = null)</code>
     </h3>
     <div class="details">
         <p>Get the key of a stack entry of the registry stacks</p>
@@ -750,7 +755,7 @@ exists in the registry.</p>
                 <td>The stack name to search in</td>
             </tr>
                     <tr>
-                <td><abbr title="Patterns\Commons\misc">misc</abbr></td>
+                <td>mixed</td>
                 <td>$default</td>
                 <td>The default value to return if it is not in registry (default is NULL)</td>
             </tr>
@@ -761,7 +766,7 @@ exists in the registry.</p>
 
                     <table>
         <tr>
-            <td><abbr title="Patterns\Commons\misc">misc</abbr></td>
+            <td>mixed</td>
             <td>The key found or $default</td>
         </tr>
     </table>
