--- a/phpdoc/Patterns/Interfaces/CachableInterface.html
+++ b/phpdoc/Patterns/Interfaces/CachableInterface.html
@@ -62,7 +62,7 @@ on your implementation.</p>
             </tr>
                     <tr>
                 <td class="type">
-                    <abbr title="Patterns\Interfaces\misc">misc</abbr>
+                    mixed
                 </td>
                 <td class="last">
                     <a href="#method_getCache">getCache</a>()
@@ -75,7 +75,7 @@ on your implementation.</p>
                     bool
                 </td>
                 <td class="last">
-                    <a href="#method_setCache">setCache</a>(<abbr title="Patterns\Interfaces\misc">misc</abbr> $content)
+                    <a href="#method_setCache">setCache</a>(mixed $content)
                     <p>Set a cache content for an item</p>
                 </td>
                 <td></td>
@@ -150,7 +150,7 @@ source if it is possible.</p>
 
                 <h3 id="method_getCache">
         <div class="location">at line 51</div>
-        <code>            public            <abbr title="Patterns\Interfaces\misc">misc</abbr>
+        <code>            public            mixed
     <strong>getCache</strong>()</code>
     </h3>
     <div class="details">
@@ -162,7 +162,7 @@ source if it is possible.</p>
 
                     <table>
         <tr>
-            <td><abbr title="Patterns\Interfaces\misc">misc</abbr></td>
+            <td>mixed</td>
             <td>
 </td>
         </tr>
@@ -174,9 +174,9 @@ source if it is possible.</p>
     </div>
 
                 <h3 id="method_setCache">
-        <div class="location">at line 63</div>
+        <div class="location">at line 62</div>
         <code>            public            bool
-    <strong>setCache</strong>(<abbr title="Patterns\Interfaces\misc">misc</abbr> $content)</code>
+    <strong>setCache</strong>(mixed $content)</code>
     </h3>
     <div class="details">
         <p>Set a cache content for an item</p>
@@ -187,7 +187,7 @@ return a boolean indicates if the caching process succeeded.</p>
 
                     <table>
                     <tr>
-                <td><abbr title="Patterns\Interfaces\misc">misc</abbr></td>
+                <td>mixed</td>
                 <td>$content</td>
                 <td>
 </td>
@@ -211,7 +211,7 @@ return a boolean indicates if the caching process succeeded.</p>
     </div>
 
                 <h3 id="method_invalidateCache">
-        <div class="location">at line 73</div>
+        <div class="location">at line 72</div>
         <code>            public            bool
     <strong>invalidateCache</strong>()</code>
     </h3>
