--- a/phpdoc/Patterns/Interfaces/UserInterface.html
+++ b/phpdoc/Patterns/Interfaces/UserInterface.html
@@ -27,9 +27,8 @@
     <strong>UserInterface</strong></p>
 
             <div class="description">
+            <p>This work is BETA (not fully tested)</p>
             <p>A simple user interface</p>
-            <p>
-</p>
         </div>
     
     
@@ -120,7 +119,7 @@
         <h2>Details</h2>
 
                         <h3 id="method_authoring">
-        <div class="location">at line 19</div>
+        <div class="location">at line 21</div>
         <code>            public            
     <strong>authoring</strong>($autologin = false)</code>
     </h3>
@@ -148,7 +147,7 @@
     </div>
 
                 <h3 id="method_signin">
-        <div class="location">at line 20</div>
+        <div class="location">at line 22</div>
         <code>            public            
     <strong>signin</strong>(array $data, $autologin = false)</code>
     </h3>
@@ -182,7 +181,7 @@
     </div>
 
                 <h3 id="method_login">
-        <div class="location">at line 21</div>
+        <div class="location">at line 23</div>
         <code>            public            
     <strong>login</strong>(array $data = array())</code>
     </h3>
@@ -210,7 +209,7 @@
     </div>
 
                 <h3 id="method_logout">
-        <div class="location">at line 22</div>
+        <div class="location">at line 24</div>
         <code>            public            
     <strong>logout</strong>(array $data = array())</code>
     </h3>
@@ -238,7 +237,7 @@
     </div>
 
                 <h3 id="method_isLogged">
-        <div class="location">at line 23</div>
+        <div class="location">at line 25</div>
         <code>            public            
     <strong>isLogged</strong>(array $data = array())</code>
     </h3>
@@ -266,7 +265,7 @@
     </div>
 
                 <h3 id="method_setUserInfos">
-        <div class="location">at line 24</div>
+        <div class="location">at line 26</div>
         <code>            public            
     <strong>setUserInfos</strong>(array $data)</code>
     </h3>
@@ -294,7 +293,7 @@
     </div>
 
                 <h3 id="method_addUserInfo">
-        <div class="location">at line 25</div>
+        <div class="location">at line 27</div>
         <code>            public            
     <strong>addUserInfo</strong>($var, $val)</code>
     </h3>
